k8s/ai-sre/holmes/templates/holms-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: holmes-route
  namespace: ai-sre
spec:
  parentRefs:
    - name: tooling-gateway
      namespace: istio-system
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /holmes
      filters:
        - type: RequestRewrite
          requestRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: holmes-holmes
          port: 80
